# Slicer-OpenCAD

./: CMakeLists.txt  LICENSE
HeterogeneityCAD/: CMakeLists.txt  HeterogeneityCAD.py
HeterogeneityCAD/FeatureExtractionLib/: FirstOrderStatistics.py  GeometricalMeasures.py  TextureGLCM.py  TextureGLRL.py
HeterogeneityCAD/FeatureWidgetHelperLib/: FeatureDescriptionLabel.py  FeatureWidgets.py
HeterogeneityCAD/MetricWidgetHelperLib/: ContextMenu.py  FeatureWidget.py  MetricDescriptionLabel.py  MetricWidget.py  __init__.py
HeterogeneityCAD/StatisticsLib/: FirstOrderStatistics.py  GeometricalMeasures.py  MorphologyStatistics.py  NodeInformation.py  RenyiDimensions.py  TextureGLCM.py  TextureGLRL.py
SegmentCAD/: CMakeLists.txt  SegmentCAD.py
SegmentCAD/LabelStatisticsLogic/: LabelStatisticsLogic.py  __init__.py
SegmentCAD/SegmentCADLogic/: SegmentCADLogic.py  __init__.py
